--- a/promotion-config.yaml
+++ b/promotion-config.yaml
@@ -12,6 +12,8 @@ spec:
     file: version.yaml
     jsonPath: $.version
   promotion:
+    version.yaml:
+     - $.version
     Chart.yaml:
       jsonPaths:
         - $.appVersion
