--- a/orders/orders-promotion-config.yaml
+++ b/orders/orders-promotion-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionTemplate
 metadata:
-  name: promotion-config
+  name: promotion-config-orders
 spec:
   applicationSourceSelector:
     matchLabels:
