--- a/orders/orders-sequential-flow.yaml
+++ b/orders/orders-sequential-flow.yaml
@@ -1,10 +1,10 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionFlow
 metadata:
-  name: demo
+  name: sequential
   annotations:
     version: 0.0.1
-    description: 'base-flow2'
+    description: 'sequential flow for Orders app'
 spec:
   triggerEnvironment: dev
   postTrigger: 'post-action'
