Update and rename post-action-failed.yaml to pre-action-failed.yaml

--- a/pre-action-failed.yaml
+++ b/pre-action-failed.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
-  name: post-action-failed
+  name: pre-action-failed
 spec:
   serviceAccountName: promotion-template
   arguments:
