--- a/pre-action.yaml
+++ b/pre-action.yaml
@@ -23,6 +23,6 @@ spec:
       command:
       - sh
       source: |
-        echo "syncing {{ workflow.parameters.APP_NAME }} "
+        echos "syncing {{ workflow.parameters.APP_NAME }} "
         sleep 4
 
