--- a/trio/trio-demo-flow.yaml
+++ b/trio/trio-demo-flow.yaml
@@ -1,7 +1,7 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionFlow
 metadata:
-  name: demo
+  name: trio-flow
   annotations:
     version: 0.0.1
     description: 'Flow to show parallel deployment'
