--- a/trio/trio-promotion-config.yaml
+++ b/trio/trio-promotion-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionTemplate
 metadata:
-  name: promotion-config
+  name: trio-promotion-config
 spec:
   applicationSourceSelector:
     matchLabels:
