--- a/demo-ui-trigger.yaml
+++ b/demo-ui-trigger.yaml
@@ -1,7 +1,7 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionFlow
 metadata:
-  name: demo-retry
+  name: demo-ui-trigger
   annotations:
     version: 0.0.1
     description: Flow to show parallel deployment
