--- a/orders/orders-promotion-config.yaml
+++ b/orders/orders-promotion-config.yaml
@@ -1,15 +1,14 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionTemplate
 metadata:
-  name: promotion-config-orders
+  name: promotion-config-accounts
 spec:
   applicationSourceSelector:
     matchExpressions:
     - key: codefresh.io/product
       operator: In
       values: ['orders', 'accounts']
-    # matchLabels:
-    #   codefresh.io/product: orders
+
   priority: 0
   versionSource:
     file: Chart.yaml
